Atualiza configuração do Docker Compose para usar novo banco de dados e remove serviço PostgreSQL. Adiciona nova regra de estilo para campos de entrada no módulo AddList.

--- a/client/src/components/boards/Board/KanbanContent/AddList.module.scss
+++ b/client/src/components/boards/Board/KanbanContent/AddList.module.scss
@@ -29,6 +29,10 @@
     }
   }
 
+  .field > :global(input) {
+    color: #172b4d !important;
+  }
+
   .selectTypeButton {
     background: transparent;
     box-shadow: none;
