--- a/client/src/components/common/AdministrationModal/UsersPane/UsersPane.module.scss
+++ b/client/src/components/common/AdministrationModal/UsersPane/UsersPane.module.scss
@@ -54,6 +54,10 @@
     }
   }
 
+  :global(.ui.table) {
+    color: #fff !important;
+  }
+
   .toggleDeactivatedButton {
     background: transparent;
     box-shadow: none;
@@ -79,5 +83,9 @@
   .wrapper {
     border: none;
     box-shadow: none;
+  }
+
+  .searchInput :global(input) {
+    color: #000 !important;
   }
 }
