feat: Atualizar estilos de botões e layout no modal de edição de data - Melhoria na usabilidade e consistência visual

--- a/client/src/components/cards/CardModal/StoryContent/StoryContent.module.scss
+++ b/client/src/components/cards/CardModal/StoryContent/StoryContent.module.scss
@@ -117,7 +117,7 @@
     outline: none;
     padding: 2px 11px;
     text-align: left;
-    text-decoration: underline;
+    text-decoration: none;
     transition: background 0.3s ease;
     vertical-align: top;
 
